Revert "POWR-1071 changed Caption field length to 128 and turned on character count; entity_embed caption dialog only allows 128 chars."
This reverts commit 13d9ba49da4c25f78c01aa81c3ac2b65f062010a.

Accidentally committed to master.

--- a/web/sites/default/config/core.entity_form_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.default.yml
@@ -18,12 +18,10 @@ dependencies:
     - image.style.max_540w
     - media.type.image
   module:
-    - allowed_formats
     - chosen_field
     - content_moderation
     - focal_point
     - lightning_media
-    - maxlength
     - text
 _core:
   default_config_hash: kyoAHlZTGIuGTaQuBblGBk8EhfnVKOl19_0j5WbpQqM
@@ -37,13 +35,7 @@ content:
     settings:
       size: 60
       placeholder: ''
-    third_party_settings:
-      allowed_formats:
-        hide_help: '1'
-        hide_guidelines: '1'
-      maxlength:
-        maxlength_js: 128
-        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+    third_party_settings: {  }
     type: text_textfield
     region: content
   field_creator:
