--- a/web/sites/default/config/core.entity_form_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.video.default.yml
@@ -14,7 +14,6 @@ dependencies:
     - field.field.media.video.field_transcript
     - media.type.video
   module:
-    - allowed_formats
     - chosen_field
     - content_moderation
     - maxlength
@@ -32,13 +31,7 @@ content:
     settings:
       size: 60
       placeholder: ''
-    third_party_settings:
-      allowed_formats:
-        hide_help: '1'
-        hide_guidelines: '1'
-      maxlength:
-        maxlength_js: 128
-        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+    third_party_settings: {  }
     type: text_textfield
     region: content
   field_creator:
