--- a/web/sites/default/config/field.field.media.image.field_caption.yml
+++ b/web/sites/default/config/field.field.media.image.field_caption.yml
@@ -25,7 +25,7 @@ field_name: field_caption
 entity_type: media
 bundle: image
 label: Caption
-description: 'Provide additional information or context for the image that is not apparent from viewing the image or reading the alt text. The caption should never repeat information provided in alt text. Limit 128 characters.'
+description: 'Provide additional information or context for the image that is not apparent from viewing the image or reading the alt text. The caption should never repeat information provided in alt text.'
 required: false
 translatable: false
 default_value: {  }
