--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,6 @@
     },
     "require": {
         "acquia/lightning": "^3.2",
-        "drupal/core": "8.6.16",
         "bower-asset/bootstrap-datepicker": "^1.8",
         "bower-asset/cropper": "^2.3",
         "composer/installers": "^1.2",
@@ -49,6 +48,7 @@
         "drupal/console": "^1.0.2",
         "drupal/content_lock": "^1.0@alpha",
         "drupal/copyright_block": "^1.0@RC",
+        "drupal/core": "8.6.16",
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/draggableviews": "^1.2",
         "drupal/ds": "^3.1",
@@ -85,6 +85,7 @@
         "drupal/remove_http_headers": "^1.0@alpha",
         "drupal/restui": "^1.0",
         "drupal/search_api_autocomplete": "^1.2",
+        "drupal/search_api_logger": "^1.3",
         "drupal/search_api_page": "^1.0",
         "drupal/search_api_solr": "1.x-dev",
         "drupal/seckit": "^1.1",
@@ -198,6 +199,9 @@
             },
             "drupal/menu_link": {
                 "3019509 - Menu item without attributes causes a notice": "https://www.drupal.org/files/issues/2018-12-10/menu_link-attributes-error-3019509-3.patch"
+            },
+            "drupal/search_api_solr": {
+                "2903920 - Can not sort on aggregated fields": "patches/powr-1068-search-api-solr.patch"
             }
         },
         "merge-plugin": {
