--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -145,6 +145,7 @@ module:
   search_api: 0
   search_api_autocomplete: 0
   search_api_db: 0
+  search_api_logger: 0
   search_api_page: 0
   search_api_solr: 0
   seckit: 0
