--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -46,6 +46,16 @@ field_settings:
       module:
         - taxonomy
         - taxonomy
+  aggregated_sorting_date:
+    label: 'Aggregated sorting date'
+    property_path: aggregated_field
+    type: date
+    configuration:
+      type: max
+      fields:
+        - 'entity:node/changed'
+        - 'entity:node/field_published_on'
+        - 'entity:node/field_start_date'
   aggregated_topic:
     label: 'Aggregated topic'
     property_path: aggregated_field
@@ -66,6 +76,14 @@ field_settings:
       module:
         - taxonomy
         - taxonomy
+  changed:
+    label: Changed
+    datasource_id: 'entity:node'
+    property_path: changed
+    type: date
+    dependencies:
+      module:
+        - node
   content_id:
     label: 'Content ID'
     datasource_id: 'entity:node'
@@ -394,6 +412,7 @@ processor_settings:
       preprocess_index: -15
       preprocess_query: -15
   portland_group_title_field: {  }
+  portland_sorting_date_field: {  }
   rendered_item: {  }
   type_boost:
     boosts:
