POWR-944 a basic starting point with a couple of updates

--- a/composer.json
+++ b/composer.json
@@ -123,8 +123,7 @@
         "symfony/css-selector": "~2.8|~3.0"
     },
     "conflict": {
-        "drupal/drupal": "*",
-        "doctrine/common": ">2.8"
+        "drupal/drupal": "*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -182,20 +181,17 @@
             "drupal/clamav": {
                 "2915237 - allowUncheckedFiles() not working as expected": "https://www.drupal.org/files/issues/2915237-2.patch"
             },
-            "drupal/search_api_pantheon": {
-                "2996001 - Use Lando client cert": "https://www.drupal.org/files/issues/2018-08-29/use_lando_cert.patch"
-            },
             "drupal/menu_token": {
                 "2948260 - Tokens not substituted in query string": "https://www.drupal.org/files/issues/2018-09-21/2988939-allow-query-parameters-12.diff"
-            },
-            "drupal/easy_breadcrumb": {
-                "2979389 - Titles in breadcrumbs are 'double-escaped'": "https://www.drupal.org/files/issues/2018-06-21/2979389-7-easy-breadcrumb--double-escaped-titles.patch"            
             },
             "drupal/embed": {
                 "2824110 - Allow site-builders to use a non-managed file as button icon": "https://www.drupal.org/files/issues/2018-07-03/embed-allow-non-managed-button-icon-files-2824110-9.patch"
             },
             "drupal/menu_link": {
                 "3019509 - Menu item without attributes causes a notice": "https://www.drupal.org/files/issues/2018-12-10/menu_link-attributes-error-3019509-3.patch"
+            },
+            "drupal/schemata": {
+                "3044788 - Update Schemata to be compatible with JSON:API 2.4": "https://www.drupal.org/files/issues/2019-05-20/3044788-23-compatible.patch"
             }
         },
         "merge-plugin": {
