POWR-983 Refactor event classes and update event filter criteria

--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -71,7 +71,7 @@ third_party_settings:
         effect: none
         speed: fast
         id: ''
-        classes: date
+        classes: 'event--date d-flex align-items-center'
       label: 'Start to end date'
       region: content
     group_start_to_end_time:
@@ -91,7 +91,7 @@ third_party_settings:
         effect: none
         speed: fast
         id: ''
-        classes: time
+        classes: 'event--time d-flex align-items-center'
       label: 'Start to end time'
       region: content
     group_meta:
@@ -175,7 +175,7 @@ content:
           id: expert
           settings:
             lb: ''
-            prefix: '<span>&nbsp;to</span>'
+            prefix: '<span class="px-1">to</span>'
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
@@ -187,7 +187,7 @@ content:
             fis-at: ''
             fi: true
             fi-el: span
-            fi-cl: 'event--end-date pl-1'
+            fi-cl: event--end-date
             fi-at: ''
             suffix: ''
             lbw: false
