--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -234,7 +234,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<p class="event--time"><i class="fas fa-clock"></i> {{ field_all_day }}</p>'
+            text: '<p class="event--time">{{ field_all_day }}</p>'
             make_link: false
             path: ''
             absolute: false
@@ -299,7 +299,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: ' to {{ field_end_time }}'
+            text: '<span class="px-1">to</span>{{ field_end_time }}'
             make_link: false
             path: ''
             absolute: false
