--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,8 @@ build_and_deploy: &build_and_deploy
     - run:
         name: Composer install
         command: |
+          # hotfix - getting error on module but can't update due to lightning dependency, try removing and getting fresh
+          rm -rf ./web/modules/contrib/search_api_solr
           # Pantheon don't allow these folders but Composer needs them
           rm -rf ./web/modules/contrib/facets
           # Run composer install with hirak/prestissimo for better performance
