HOTFIX-23 added workaround to 2nd build process

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -191,6 +191,8 @@ run_tests: &run_tests
     - run:
         name: Composer install
         command: |
+          # hotfix - getting error on module but can't update due to lightning dependency, try removing and getting fresh
+          rm -rf ./web/modules/contrib/search_api_solr
           # Run composer install with hirak/prestissimo for better performance
           composer config --global --auth github-oauth.github.com "$COMPOSER_TOKEN"
           composer global require hirak/prestissimo && composer install --no-suggest --no-interaction
