POWR-990 imcremental commit, added new fields and featured displays

--- a/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
@@ -45,6 +45,7 @@ third_party_settings:
         - field_summary
         - field_online_application_link
         - field_body_content
+        - field_search_keywords
       secondary:
         - field_phone
         - field_phone_help
@@ -138,7 +139,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
-    region: content
+    region: primary
   field_service_location:
     weight: 6
     label: hidden
