--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -16,6 +16,8 @@ dependencies:
     - field.field.group.bureau_office.field_enable_programs_menu_item
     - field.field.group.bureau_office.field_enable_projects_menu_item
     - field.field.group.bureau_office.field_enable_services_and_inform
+    - field.field.group.bureau_office.field_featured_content
+    - field.field.group.bureau_office.field_featured_group
     - field.field.group.bureau_office.field_featured_media
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
@@ -47,7 +49,7 @@ third_party_settings:
         - field_email
         - field_building
       parent_name: ''
-      weight: 4
+      weight: 6
       format_type: fieldset
       format_settings:
         label: 'Contact Information'
@@ -68,7 +70,7 @@ third_party_settings:
         - field_enable_programs_menu_item
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 10
+      weight: 12
       format_type: fieldset
       format_settings:
         id: ''
@@ -89,7 +91,7 @@ content:
     type: address_default
     region: content
   field_audience:
-    weight: 6
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -167,6 +169,24 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_featured_content:
+    weight: 4
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_featured_group:
+    weight: 5
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_featured_media:
     type: entity_browser_entity_reference
     weight: 3
@@ -183,7 +203,7 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 12
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -192,14 +212,14 @@ content:
     region: content
   field_logo:
     type: image_image
-    weight: 8
+    weight: 10
     settings:
       preview_image_style: thumbnail
       progress_indicator: throbber
     region: content
     third_party_settings: {  }
   field_menu_link:
-    weight: 11
+    weight: 13
     settings: {  }
     third_party_settings: {  }
     type: menu_link_default
@@ -213,7 +233,7 @@ content:
     type: string_textfield
     region: content
   field_parent_group:
-    weight: 5
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
@@ -230,7 +250,7 @@ content:
     type: telephone_cleave
     region: content
   field_search_keywords:
-    weight: 33
+    weight: 15
     settings:
       size: 60
       placeholder: ''
@@ -246,7 +266,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 9
+    weight: 11
     settings:
       rows: 2
       placeholder: ''
@@ -259,7 +279,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 7
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
