--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -61,14 +61,6 @@ content:
             classes: {  }
     type: entity_reference_entity_view
     region: content
-  field_search_keywords:
-    weight: 3
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_summary:
     weight: 1
     settings:
@@ -129,6 +121,7 @@ hidden:
   field_menu_link: true
   field_parent_group: true
   field_phone: true
+  field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
   label: true
