--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -118,14 +118,6 @@ content:
             classes: {  }
     type: entity_reference_entity_view
     region: content
-  field_search_keywords:
-    weight: 4
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_start_date:
     weight: 19
     label: inline
@@ -217,6 +209,7 @@ hidden:
   field_parent_group: true
   field_project_status: true
   field_project_type: true
+  field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
   label: true
