--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -66,32 +66,16 @@ content:
             classes: {  }
     type: entity_reference_entity_view
     region: content
-  field_popular:
-    weight: 2
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_search_keywords:
-    weight: 3
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
 hidden:
   content_moderation_control: true
   field_audience: true
   field_group: true
   field_legacy_path: true
   field_page_type: true
+  field_popular: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_summary: true
   field_topics: true
   links: true
