POWR-990 first pass at config for bureau/office homepage featured content

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -72,7 +72,7 @@ content:
     weight: 4
     label: above
     settings:
-      view_mode: default
+      view_mode: featured
       link: false
     third_party_settings:
       ds:
