--- a/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.city_service.field_popular
     - field.field.node.city_service.field_related_content
     - field.field.node.city_service.field_reviewer
+    - field.field.node.city_service.field_search_keywords
     - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_summary
     - field.field.node.city_service.field_time_to_complete
@@ -18,7 +19,6 @@ dependencies:
     - node.type.city_service
   module:
     - ds
-    - entity_reference_revisions
     - panelizer
     - user
 third_party_settings:
@@ -36,25 +36,21 @@ third_party_settings:
       settings: {  }
     regions:
       content:
+        - node_title
         - field_summary
-        - field_time_to_complete
-        - field_service_mode
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
 id: node.city_service.featured
 targetEntityType: node
 bundle: city_service
 mode: featured
 content:
-  field_service_mode:
-    type: entity_reference_revisions_entity_view
-    weight: 2
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
   field_summary:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -89,14 +85,6 @@ content:
             fi-def-at: false
     type: string
     region: content
-  field_time_to_complete:
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
 hidden:
   content_moderation_control: true
   field_audience: true
@@ -106,6 +94,9 @@ hidden:
   field_popular: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
+  field_service_mode: true
+  field_time_to_complete: true
   field_topics: true
   links: true
   scheduled_publication: true
