POWR-1017 reverted group events view to only consider event start date in filters

--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -49,7 +49,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Apply
+          submit_button: Filter
           reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
@@ -620,67 +620,17 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: '>='
+          operator: between
           value:
             min: today
             max: '+30 days'
             value: today
             type: date
-          group: 2
+          group: 1
           exposed: true
           expose:
             operator_id: field_start_date_value_op
-            label: 'Start date between'
-            description: ''
-            use_operator: false
-            operator: field_start_date_value_op
-            identifier: field_start_date_value
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: 'Start date (field_start_date)'
-            description: null
-            identifier: field_start_date_value
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items:
-              1: {  }
-              2: {  }
-              3: {  }
-          plugin_id: datetime
-        field_end_date_value:
-          id: field_end_date_value
-          table: node__field_end_date
-          field: field_end_date_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '<='
-          value:
-            min: ''
-            max: ''
-            value: '+30 days'
-            type: date
-          group: 2
-          exposed: true
-          expose:
-            operator_id: field_end_date_value_op
-            label: 'End date (field_end_date)'
+            label: 'Date range between'
             description: ''
             use_operator: false
             operator: field_start_date_value_op
@@ -812,7 +762,6 @@ display:
         operator: AND
         groups:
           1: AND
-          2: AND
       link_url: ''
       link_display: page_1
     cache_metadata:
