POWR-1017 Updated sitewide search to use exposed date filters, added dates to events search result display.

--- a/web/sites/default/config/views.view.events_index.yml
+++ b/web/sites/default/config/views.view.events_index.yml
@@ -80,8 +80,15 @@ display:
               program: default
               project: default
             'entity:node':
+              charter_article: default
+              charter_chapter: default
+              charter_section: default
               city_service: default
-              event: teaser
+              code_chapter: default
+              code_section: default
+              code_title: default
+              development_permit: default
+              event: search_result
               guide: default
               information: default
               news: default
@@ -274,6 +281,53 @@ display:
             - rendered_item
             - title
           plugin_id: search_api_fulltext
+        field_start_date_1:
+          id: field_start_date_1
+          table: search_api_index_full_index
+          field: field_start_date
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: between
+          value:
+            min: today
+            max: '+30 days'
+            value: ''
+            type: date
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_start_date_1_op
+            label: 'Date range between'
+            description: ''
+            use_operator: false
+            operator: field_start_date_1_op
+            identifier: start_date
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+              code_editor: '0'
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: search_api_date
       sorts:
         field_start_date:
           id: field_start_date
@@ -298,18 +352,6 @@ display:
           exposed: false
           expose:
             label: ''
-          plugin_id: search_api
-        title:
-          id: title
-          table: search_api_index_full_index
-          field: title
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: ASC
-          exposed: false
-          expose:
-            label: Title
           plugin_id: search_api
       title: 'Upcoming events'
       header:
