POWR-971 Send email to reviewer

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -67,6 +67,7 @@ module:
   hal: 0
   help: 0
   history: 0
+  htmlmail: 0
   image: 0
   image_widget_crop: 0
   inline_entity_form: 0
@@ -140,6 +141,7 @@ module:
   responsive_image: 0
   rest: 0
   rh_node: 0
+  rules: 0
   schemata: 0
   schemata_json_schema: 0
   search_api: 0
@@ -163,6 +165,7 @@ module:
   toolbar: 0
   transliterate_filenames: 0
   twig_tweak: 0
+  typed_data: 0
   unified_twig_ext: 0
   user: 0
   video_embed_field: 0
