--- a/web/sites/default/config/mailsystem.settings.yml
+++ b/web/sites/default/config/mailsystem.settings.yml
@@ -9,3 +9,7 @@ modules:
     none:
       formatter: sendgrid_integration
       sender: sendgrid_integration
+  rules:
+    none:
+      formatter: htmlmail
+      sender: sendgrid_integration
