--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,7 @@
         "drupal/google_analytics": "^2.3",
         "drupal/group": "^1.0",
         "drupal/groupmedia": "^2.0",
+        "drupal/htmlmail": "^3.0@alpha",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key": "^1.8",
         "drupal/link_class": "^1.3",
@@ -81,6 +82,7 @@
         "drupal/rabbit_hole": "^1.0@beta",
         "drupal/redirect": "^1.1",
         "drupal/remove_http_headers": "^1.0@alpha",
+        "drupal/rules": "^3.0@alpha",
         "drupal/search_api_autocomplete": "^1.2",
         "drupal/search_api_logger": "^1.3",
         "drupal/search_api_page": "^1.0",
@@ -200,6 +202,9 @@
             },
             "drupal/search_api_solr": {
                 "2903920 - Can not sort on aggregated fields": "patches/powr-1068-search-api-solr.patch"
+            },
+            "drupal/rules": {
+                "2724129: Text area for Rules -> Action -> Send Email -> Message": "patches/powr-971-send-email-text-area.patch"
             }
         },
         "merge-plugin": {
