--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -197,3 +197,6 @@ portland_migrations: 0.0.0
 search_api_logger: 1.3.0
 search_api_spellcheck: 0.0.0
 search_api_autocomplete: 1.2.0
+typed_data: 1.0.0-alpha3
+rules: 3.0.0-alpha4
+tr_rulez: 0.0.0
