POWR-971 Use MimeMail

--- a/web/sites/default/config/mailsystem.settings.yml
+++ b/web/sites/default/config/mailsystem.settings.yml
@@ -11,5 +11,5 @@ modules:
       sender: sendgrid_integration
   rules:
     none:
-      formatter: htmlmail
+      formatter: mime_mail
       sender: sendgrid_integration
