--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,6 @@
         "drupal/google_analytics": "^2.3",
         "drupal/group": "^1.0",
         "drupal/groupmedia": "^2.0",
-        "drupal/htmlmail": "^3.0@alpha",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key": "^1.8",
         "drupal/link_class": "^1.3",
@@ -75,6 +74,7 @@
         "drupal/migrate_plus": "^4.2",
         "drupal/migrate_source_csv": "^2.2",
         "drupal/migrate_tools": "^4.1",
+        "drupal/mimemail": "^1.0@alpha",
         "drupal/openid_connect": "^1.0@beta",
         "drupal/page_manager": "^4.0@beta",
         "drupal/pantheon_advanced_page_cache": "^1.0",
