--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -67,7 +67,6 @@ module:
   hal: 0
   help: 0
   history: 0
-  htmlmail: 0
   image: 0
   image_widget_crop: 0
   inline_entity_form: 0
@@ -109,6 +108,7 @@ module:
   migrate_plus: 0
   migrate_source_csv: 0
   migrate_tools: 0
+  mimemail: 0
   moderation_dashboard: 0
   node: 0
   openapi: 0
