POWR-1017 removed notion of upcoming/past events from sitewide events view, added no results message

--- a/web/sites/default/config/views.view.events_index.yml
+++ b/web/sites/default/config/views.view.events_index.yml
@@ -193,49 +193,6 @@ display:
             group_items: {  }
           reduce_duplicates: false
           plugin_id: search_api_options
-        field_start_date:
-          id: field_start_date
-          table: search_api_index_full_index
-          field: field_start_date
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '>='
-          value:
-            min: ''
-            max: ''
-            value: today
-            type: offset
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: search_api_date
         search_api_fulltext:
           id: search_api_fulltext
           table: search_api_index_full_index
@@ -249,7 +206,7 @@ display:
           exposed: true
           expose:
             operator_id: ''
-            label: 'Search upcoming events'
+            label: 'Search events'
             description: ''
             use_operator: true
             operator: search_api_fulltext_op
@@ -262,6 +219,7 @@ display:
               anonymous: '0'
               administrator: '0'
               sitewide_editor: '0'
+              code_editor: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -279,7 +237,6 @@ display:
           min_length: null
           fields:
             - rendered_item
-            - title
           plugin_id: search_api_fulltext
         field_start_date_1:
           id: field_start_date_1
@@ -353,7 +310,7 @@ display:
           expose:
             label: ''
           plugin_id: search_api
-      title: 'Upcoming events'
+      title: Events
       header:
         result:
           id: result
@@ -366,7 +323,20 @@ display:
           content: '@total upcoming events'
           plugin_id: result
       footer: {  }
-      empty: {  }
+      empty:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content:
+            value: 'No events found in that date range.'
+            format: basic_style_editor
+          plugin_id: text
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
@@ -384,7 +354,7 @@ display:
   page_1:
     display_plugin: page
     id: page_1
-    display_title: 'Page: Upcoming events'
+    display_title: Events
     position: 1
     display_options:
       display_extenders: {  }
@@ -399,30 +369,7 @@ display:
         context: '0'
         menu_name: main
       display_description: ''
-      header:
-        result:
-          id: result
-          table: views
-          field: result
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: true
-          content: '@total upcoming events. '
-          plugin_id: result
-        area:
-          id: area
-          table: views
-          field: area
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: true
-          tokenize: false
-          content:
-            value: '<a href="/events/archive">View past events</a>'
-            format: simple_editor
-          plugin_id: text
+      header: {  }
       defaults:
         header: false
     cache_metadata:
