POWR-971 Rules for update and create node.

--- a/composer.json
+++ b/composer.json
@@ -205,6 +205,9 @@
             },
             "drupal/rules": {
                 "2724129: Text area for Rules -> Action -> Send Email -> Message": "patches/powr-971-send-email-text-area.patch"
+            },
+            "drupal/sendgrid_integration": {
+                "2994706: Emails - empty From name and email address": "https://www.drupal.org/files/issues/2019-03-22/sendgrid_integration-empty_from_values-2994706-19.patch"
             }
         },
         "merge-plugin": {
