--- a/web/sites/default/config/rules.reaction.send_email_to_reviewer_after_creating_new_content.yml
+++ b/web/sites/default/config/rules.reaction.send_email_to_reviewer_after_creating_new_content.yml
@@ -1,26 +1,26 @@
-uuid: d769b4ec-e1e9-44cc-85cd-4564cccaa78e
+uuid: a0214f26-6f4b-4759-99f3-8c63d99e5bdc
 langcode: en
 status: true
 dependencies: {  }
-id: send_email_to_reviewer_after_updating_existing_content
-label: 'Send email to reviewer after updating existing content'
+id: send_email_to_reviewer_after_creating_new_content
+label: send_email_to_reviewer_after_creating_new_content
 events:
   -
-    event_name: 'rules_entity_update:node'
-description: 'When a content node is saved, send an email to the assigned reviewer.'
+    event_name: 'rules_entity_insert:node'
+description: 'Send email to the reviewer if the new content is "In review" and has a reviewer assigned.'
 tags:
   - ''
 config_version: '3'
 expression:
   id: rules_rule
-  uuid: 91df92ba-3622-410f-bfa1-e1a67a3248fb
+  uuid: e7391bcc-6c54-4c58-a69b-bf3b16524031
   conditions:
     id: rules_and
-    uuid: bd2349aa-f6c1-424a-bc95-e8348438f9d8
+    uuid: f7e90b0e-b5af-4782-b47a-f9f7e8bb6c11
     conditions:
       -
         id: rules_condition
-        uuid: fd393076-1b46-44a9-8e4b-ab82a02e346b
+        uuid: 1e5d2c80-5f8f-42f5-8421-41853a67e3a0
         context_values: {  }
         context_mapping:
           node: node
@@ -30,11 +30,11 @@ expression:
         negate: false
   actions:
     id: rules_action_set
-    uuid: b3727bbe-fac3-4251-850b-abbbdbb71c14
+    uuid: 01de9426-50ec-42f1-aafc-bbc3ed751647
     actions:
       -
         id: rules_action
-        uuid: 44a05a12-4501-408b-8245-26a03a27a760
+        uuid: e4c078ec-500d-4caf-985d-e8f93438bae8
         context_values:
           to:
             - '{{node.field_reviewer.entity.mail.value}}'
