POWR-990 hide group label on Featured displays, made titles into links on group Featured display.

--- a/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
@@ -37,6 +37,7 @@ third_party_settings:
     regions:
       content:
         - node_title
+        - field_group
         - field_summary
     fields:
       node_title:
@@ -44,13 +45,38 @@ third_party_settings:
         weight: 0
         label: hidden
         formatter: default
+        settings:
+          link: true
+          wrapper: h2
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: node.city_service.featured
 targetEntityType: node
 bundle: city_service
 mode: featured
 content:
-  field_summary:
+  field_group:
+    type: entity_reference_label
     weight: 1
+    region: content
+    label: hidden
+    settings:
+      link: true
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_summary:
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -89,7 +115,6 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_community_actions: true
-  field_group: true
   field_legacy_path: true
   field_popular: true
   field_related_content: true
