--- a/web/sites/default/config/core.entity_view_display.node.page.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.featured.yml
@@ -20,7 +20,6 @@ dependencies:
   module:
     - ds
     - panelizer
-    - portland
     - user
 third_party_settings:
   panelizer:
@@ -52,12 +51,20 @@ bundle: page
 mode: featured
 content:
   field_group:
-    type: portland_plural_label
+    type: entity_reference_label
     weight: 1
     region: content
-    label: above
-    settings: {  }
-    third_party_settings: {  }
+    label: hidden
+    settings:
+      link: true
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_summary:
     type: string
     weight: 2
