--- a/web/sites/default/config/core.entity_view_display.group.project.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.featured.yml
@@ -83,8 +83,15 @@ content:
     region: content
     label: hidden
     settings:
-      link_to_entity: false
-    third_party_settings: {  }
+      link_to_entity: true
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
   changed: true
   created: true
