--- a/web/sites/default/config/core.entity_view_display.node.development_permit.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.featured.yml
@@ -23,7 +23,6 @@ dependencies:
   module:
     - ds
     - panelizer
-    - portland
     - user
 third_party_settings:
   panelizer:
@@ -55,12 +54,20 @@ bundle: development_permit
 mode: featured
 content:
   field_group:
-    type: portland_plural_label
+    type: entity_reference_label
     weight: 1
     region: content
     label: hidden
-    settings: {  }
-    third_party_settings: {  }
+    settings:
+      link: true
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_summary:
     weight: 2
     label: hidden
