POWR-990 finish updating other group type displays

--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -15,6 +15,8 @@ dependencies:
     - field.field.group.program.field_enable_programs_menu_item
     - field.field.group.program.field_enable_projects_menu_item
     - field.field.group.program.field_enable_services_and_inform
+    - field.field.group.program.field_featured_content
+    - field.field.group.program.field_featured_group
     - field.field.group.program.field_featured_media
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
@@ -45,7 +47,7 @@ third_party_settings:
         - field_email
         - field_building
       parent_name: ''
-      weight: 5
+      weight: 7
       format_type: fieldset
       format_settings:
         label: 'Contact Information'
@@ -65,7 +67,7 @@ third_party_settings:
         - field_enable_programs_menu_item
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 9
+      weight: 11
       format_type: fieldset
       format_settings:
         id: ''
@@ -86,7 +88,7 @@ content:
     type: address_default
     region: content
   field_audience:
-    weight: 7
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -157,6 +159,24 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_featured_content:
+    type: entity_reference_autocomplete
+    weight: 3
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_featured_group:
+    type: entity_reference_autocomplete
+    weight: 4
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_featured_media:
     type: entity_browser_entity_reference
     weight: 2
@@ -173,7 +193,7 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 11
+    weight: 13
     settings:
       size: 60
       placeholder: ''
@@ -182,20 +202,20 @@ content:
     region: content
   field_logo:
     type: image_image
-    weight: 3
+    weight: 5
     settings:
       preview_image_style: thumbnail
       progress_indicator: throbber
     region: content
     third_party_settings: {  }
   field_menu_link:
-    weight: 10
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: menu_link_default
     region: content
   field_parent_group:
-    weight: 4
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -209,7 +229,7 @@ content:
     type: telephone_cleave
     region: content
   field_search_keywords:
-    weight: 23
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -225,7 +245,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 6
+    weight: 8
     settings:
       rows: 2
       placeholder: ''
@@ -238,7 +258,7 @@ content:
     region: content
     type: string_textarea
   field_topics:
-    weight: 8
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
