--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -11,6 +11,8 @@ dependencies:
     - field.field.group.project.field_enable_news_and_notices_me
     - field.field.group.project.field_enable_projects_menu_item
     - field.field.group.project.field_end_date
+    - field.field.group.project.field_featured_content
+    - field.field.group.project.field_featured_group
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
@@ -39,7 +41,7 @@ third_party_settings:
         - field_enable_documents_menu_item
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 11
+      weight: 13
       format_type: fieldset
       format_settings:
         id: ''
@@ -54,7 +56,7 @@ bundle: project
 mode: default
 content:
   field_audience:
-    weight: 5
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -95,7 +97,7 @@ content:
     type: boolean_checkbox
     region: content
   field_end_date:
-    weight: 10
+    weight: 12
     settings:
       title: ''
       format: mm/dd/yyyy
@@ -152,6 +154,24 @@ content:
     third_party_settings: {  }
     type: bootstrap_date_widget
     region: content
+  field_featured_content:
+    type: entity_reference_autocomplete
+    weight: 4
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_featured_group:
+    type: entity_reference_autocomplete
+    weight: 5
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_featured_media:
     type: entity_browser_entity_reference
     weight: 3
@@ -168,7 +188,7 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 12
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -176,13 +196,13 @@ content:
     type: string_textfield
     region: content
   field_parent_group:
-    weight: 4
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_project_status:
-    weight: 8
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -194,7 +214,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_search_keywords:
-    weight: 15
+    weight: 17
     settings:
       size: 60
       placeholder: ''
@@ -210,7 +230,7 @@ content:
     type: string_textfield
     region: content
   field_start_date:
-    weight: 9
+    weight: 11
     settings:
       title: ''
       format: mm/dd/yyyy
@@ -268,7 +288,7 @@ content:
     type: bootstrap_date_widget
     region: content
   field_summary:
-    weight: 7
+    weight: 9
     settings:
       rows: 2
       placeholder: ''
@@ -281,7 +301,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 6
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -296,13 +316,13 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 13
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 14
+    weight: 16
     region: content
     settings:
       match_operator: CONTAINS
