--- a/web/sites/default/config/core.entity_view_display.group.program.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.featured.yml
@@ -15,6 +15,8 @@ dependencies:
     - field.field.group.program.field_enable_programs_menu_item
     - field.field.group.program.field_enable_projects_menu_item
     - field.field.group.program.field_enable_services_and_inform
+    - field.field.group.program.field_featured_content
+    - field.field.group.program.field_featured_group
     - field.field.group.program.field_featured_media
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
@@ -110,6 +112,8 @@ hidden:
   field_enable_programs_menu_item: true
   field_enable_projects_menu_item: true
   field_enable_services_and_inform: true
+  field_featured_content: true
+  field_featured_group: true
   field_featured_media: true
   field_legacy_path: true
   field_logo: true
