--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -10,6 +10,8 @@ dependencies:
     - field.field.group.project.field_enable_news_and_notices_me
     - field.field.group.project.field_enable_projects_menu_item
     - field.field.group.project.field_end_date
+    - field.field.group.project.field_featured_content
+    - field.field.group.project.field_featured_group
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
@@ -39,6 +41,8 @@ third_party_settings:
         - group_start_to_end_date
         - field_summary
         - group_site_menu_entity_view_1
+        - field_featured_content
+        - field_featured_group
         - field_start_date
         - field_end_date
   field_group:
@@ -102,6 +106,40 @@ content:
             fis-def-at: false
             fi: false
             fi-def-at: false
+  field_featured_content:
+    type: entity_reference_entity_view
+    weight: 4
+    region: content
+    label: above
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: Featured
+            lb-col: false
+            classes: {  }
+  field_featured_group:
+    type: entity_reference_entity_view
+    weight: 5
+    region: content
+    label: above
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: 'Programs and projects'
+            lb-col: false
+            classes: {  }
   field_featured_media:
     weight: 0
     label: hidden
