--- a/web/sites/default/config/core.entity_view_display.group.project.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.featured.yml
@@ -11,6 +11,8 @@ dependencies:
     - field.field.group.project.field_enable_news_and_notices_me
     - field.field.group.project.field_enable_projects_menu_item
     - field.field.group.project.field_end_date
+    - field.field.group.project.field_featured_content
+    - field.field.group.project.field_featured_group
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
@@ -102,6 +104,8 @@ hidden:
   field_enable_news_and_notices_me: true
   field_enable_projects_menu_item: true
   field_end_date: true
+  field_featured_content: true
+  field_featured_group: true
   field_featured_media: true
   field_legacy_path: true
   field_parent_group: true
