--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -14,6 +14,8 @@ dependencies:
     - field.field.group.program.field_enable_programs_menu_item
     - field.field.group.program.field_enable_projects_menu_item
     - field.field.group.program.field_enable_services_and_inform
+    - field.field.group.program.field_featured_content
+    - field.field.group.program.field_featured_group
     - field.field.group.program.field_featured_media
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
@@ -40,11 +42,47 @@ third_party_settings:
         - field_featured_media
         - field_summary
         - group_site_menu_entity_view_1
+        - field_featured_group
+        - field_featured_content
 id: group.program.default
 targetEntityType: group
 bundle: program
 mode: default
 content:
+  field_featured_content:
+    type: entity_reference_entity_view
+    weight: 5
+    region: content
+    label: above
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: 'Programs and projects'
+            lb-col: false
+            classes: {  }
+  field_featured_group:
+    type: entity_reference_entity_view
+    weight: 3
+    region: content
+    label: above
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: Featured
+            lb-col: false
+            classes: {  }
   field_featured_media:
     weight: 0
     label: hidden
