--- a/web/sites/default/config/rules.reaction.send_email_to_reviewer_after_updating_existing_content.yml
+++ b/web/sites/default/config/rules.reaction.send_email_to_reviewer_after_updating_existing_content.yml
@@ -39,7 +39,7 @@ expression:
           to:
             - '{{node.field_reviewer.entity.mail.value}}'
           subject: 'Reviewer assignment'
-          message: "<div><a href=\"mailto: {{node.revision_uid.entity.mail.value}}\">{{node.revision_uid.entity.name.value}}</a> has assigned you as the reviewer for <a href=\"{{node | entity_url }}\"> {{node.title.value}} </a></div>\r\n<p/>\r\n<div><h3>Revision log:</h3>\r\n{{node.revision_log.value}}</div>\r\n<p/>\r\n<div>Last updated: {{node.changed.value | format_date('custom', 'l Y/n/j g:i A')}} </div>"
+          message: "<div><a href=\"{{node.revision_uid.entity|entity_url}}\">{{node.revision_uid.entity.name.value}}</a> has assigned you to review <a href=\"{{node | entity_url }}\"> {{node.title.value}} </a></div>\r\n<p/>\r\n<div><h3>Revision log:</h3>\r\n{{node.revision_log.value}}</div>\r\n<p/>\r\n<div>Last updated: {{node.changed.value | format_date('custom', 'l Y/n/j g:i A')}} </div>"
           reply: ''
           language: ''
         context_mapping: {  }
