--- a/web/themes/custom/cloudy/package.json
+++ b/web/themes/custom/cloudy/package.json
@@ -20,26 +20,27 @@
     "bootstrap4-chosen": "^1.0.0-alpha.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.5",
-    "babel-loader": "^8.0.4",
+    "@babel/core": "^7.4.5",
+    "autoprefixer": "^9.5.1",
+    "babel-loader": "^8.0.6",
     "bootstrap": "^4.3",
     "browser-sync": "^2.26.5",
     "browser-sync-webpack-plugin": "^2.2.2",
-    "css-loader": "^0.28.10",
+    "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
     "globby": "^8.0.1",
     "html-webpack-plugin": "^3.0.6",
     "import-glob-loader": "^1.1.0",
-    "jquery": "^3.4.0",
+    "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.10.0",
-    "popper.js": "^1.0.1",
+    "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
     "postcss": "^6.0.19",
     "postcss-loader": "^2.1.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.20.3",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.1"
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1"
   }
 }
