POWR-826 council meeting and document types and vocabularies

--- a/web/sites/default/config/field.storage.node.field_agenda_type.yml
+++ b/web/sites/default/config/field.storage.node.field_agenda_type.yml
@@ -1,20 +1,21 @@
-uuid: 2b5e2698-612d-4a8f-90c7-9a3b42ad06bb
+uuid: cdb79f58-518f-44ca-b1b6-0002587619a3
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
     - node
-    - time_field
+    - taxonomy
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_start_time
-field_name: field_start_time
+id: node.field_agenda_type
+field_name: field_agenda_type
 entity_type: node
-type: time
-settings: {  }
-module: time_field
+type: entity_reference
+settings:
+  target_type: taxonomy_term
+module: core
 locked: false
 cardinality: 1
 translatable: true
