--- a/web/sites/default/config/field.storage.node.field_council_document_status.yml
+++ b/web/sites/default/config/field.storage.node.field_council_document_status.yml
@@ -1,20 +1,21 @@
-uuid: 2b5e2698-612d-4a8f-90c7-9a3b42ad06bb
+uuid: 95d8f898-1787-4fb8-939a-5ed665ab1be5
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
     - node
-    - time_field
+    - taxonomy
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_start_time
-field_name: field_start_time
+id: node.field_council_document_status
+field_name: field_council_document_status
 entity_type: node
-type: time
-settings: {  }
-module: time_field
+type: entity_reference
+settings:
+  target_type: taxonomy_term
+module: core
 locked: false
 cardinality: 1
 translatable: true
