--- a/web/sites/default/config/field.storage.node.field_documents_and_exhibits.yml
+++ b/web/sites/default/config/field.storage.node.field_documents_and_exhibits.yml
@@ -1,22 +1,26 @@
-uuid: 2b5e2698-612d-4a8f-90c7-9a3b42ad06bb
+uuid: 991b36b3-8924-4277-8dcd-97c8a66926f2
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
+    - file
     - node
-    - time_field
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_start_time
-field_name: field_start_time
+id: node.field_documents_and_exhibits
+field_name: field_documents_and_exhibits
 entity_type: node
-type: time
-settings: {  }
-module: time_field
+type: file
+settings:
+  display_field: false
+  display_default: false
+  uri_scheme: public
+  target_type: file
+module: file
 locked: false
-cardinality: 1
+cardinality: -1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
