--- a/web/sites/default/config/field.storage.node.field_notes.yml
+++ b/web/sites/default/config/field.storage.node.field_notes.yml
@@ -1,20 +1,20 @@
-uuid: 2b5e2698-612d-4a8f-90c7-9a3b42ad06bb
+uuid: 45f6383c-f907-42f7-aa26-ac4561d1fd1b
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
     - node
-    - time_field
+    - text
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_start_time
-field_name: field_start_time
+id: node.field_notes
+field_name: field_notes
 entity_type: node
-type: time
+type: text_long
 settings: {  }
-module: time_field
+module: text
 locked: false
 cardinality: 1
 translatable: true
