--- a/web/sites/default/config/field.storage.paragraph.field_agenda_item_number.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_agenda_item_number.yml
@@ -1,20 +1,21 @@
-uuid: 2b5e2698-612d-4a8f-90c7-9a3b42ad06bb
+uuid: b2b861cd-e2c5-4bb7-8e3e-392e9d29ed9a
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
-    - node
-    - time_field
+    - paragraphs
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_start_time
-field_name: field_start_time
-entity_type: node
-type: time
-settings: {  }
-module: time_field
+id: paragraph.field_agenda_item_number
+field_name: field_agenda_item_number
+entity_type: paragraph
+type: integer
+settings:
+  unsigned: false
+  size: normal
+module: core
 locked: false
 cardinality: 1
 translatable: true
