POWR-971 Fix duplicated email on new service

--- a/web/sites/default/config/rules.reaction.send_email_to_reviewer_after_creating_new_content.yml
+++ b/web/sites/default/config/rules.reaction.send_email_to_reviewer_after_creating_new_content.yml
@@ -28,6 +28,16 @@ expression:
         provides_mapping: {  }
         condition_id: portland_in_review_and_has_reviewer
         negate: false
+      -
+        id: rules_condition
+        uuid: 5e4247d9-89b5-417c-b007-a20c61d934c3
+        context_values: {  }
+        context_mapping:
+          entity: node
+        context_processors: {  }
+        provides_mapping: {  }
+        condition_id: rules_entity_is_new
+        negate: false
   actions:
     id: rules_action_set
     uuid: 01de9426-50ec-42f1-aafc-bbc3ed751647
